<resources>
    <string name="app_name">Multiverse</string>
    <string name="action_settings">Settings</string>

    <string name="network_error">A network error occurred. Please, check your connection.</string>

    <string name="login_email_field_hint">example.example@gmail.com</string>
    <string name="login_password_field_hint">●●●●●●●</string>
    <string name="login_loginbutton_text">Sign in</string>
    <string name="login_registerbutton_text">REGISTER</string>
    <string name="login_googlebuttonlogin_text">GOOGLE</string>
    <string name="login_afterGoogleSignUp_username_greet_text">Please, specify your username.</string>
    <string name="login_afterGoogleSignUp_password_greet_text">Please, specify your password.</string>
    <string name="login_afterGoogleSignUp_sex_greet_text">Please, specify your sex.</string>
    <string name="login_afterGoogleSignUp_birthday_greet_text">Please, specify your birthday.</string>
    <string name="login_loginprocess_failed_invalid_user">Authentication failed. Invalid user.</string>
    <string name="login_loginprocess_failed_invalid_password">Authentication failed. Invalid password.</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="password_too_short">Password is too short!</string>

    <string name="register_register">REGISTER</string>
    <string name="register_first_name">FIRST NAME</string>
    <string name="register_last_name">LAST NAME</string>
    <string name="register_username">USERNAME</string>
    <string name="register_password">PASSWORD</string>
    <string name="register_password_repeat">REPEAT PASSWORD</string>
    <string name="register_email">EMAIL</string>
    <string name="register_sex">SEX</string>
    <string name="register_birthday">BIRTHDAY</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="month">MONTH</string>
    <string name="day">DAY</string>
    <string name="year">YEAR</string>
    <string name="register_terms_and_privacy">Accept Terms of Service and Privacy Policy</string>
    <string name="register_email_already_in_use">The specified email is already in use! Choose a different email.</string>
    <string name="register_username_already_in_use">The specified username is already in use! Choose a different username.</string>


    <string name="main_map_text">EXPLORE!</string>
    <string name="main_profile_text">PROFILE</string>
    <string name="main_inbox_text">INBOX</string>
    <string name="main_settings_text">SETTINGS</string>
    <string name="main_help_text">HELP</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">Map</string>
    <string name="main_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>
