<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_gradiented"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/moon_bold"
        android:text="NEURON"
        android:textAlignment="center"
        android:textColor="@color/blue_aqua"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="65dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/login_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_email_field"
        android:layout_width="290dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_gradiented"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:hint="@string/login_email_field_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:textAlignment="textStart"
        android:textColor="@color/login_text"
        android:textColorHint="@color/login_hint_text"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded_gradiented"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:hint="@string/login_password_field_hint"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textAlignment="viewStart"
        android:textColor="@color/login_text"
        android:textColorHint="@color/login_hint_text"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_field"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_loginbutton"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_loginbutton_v2"
        android:fontFamily="@font/roboto"
        android:text="@string/login_loginbutton_text"
        android:textAllCaps="false"
        android:textColor="@drawable/login_loginbutton_v2_text_colors"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/login_registerbutton"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_registerbutton_style"
        android:fontFamily="@font/moon_bold"
        android:text="@string/login_registerbutton_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginbutton"
        app:layout_constraintVertical_bias="0.26" />

    <!--
    <LinearLayout
        android:id="@+id/login_google_button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_loginbutton_style"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fontFamily="@font/moon_bold"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/login_googlebuttonlogin_text"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_google_icon" />
    </LinearLayout>
    -->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google_sign_in_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/login_worldmap"
        android:layout_width="344dp"
        android:layout_height="336dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_FTGS_viewPagerLayout"
        android:layout_width="330dp"
        android:layout_height="310dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_googleregister_popup_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <android.support.design.widget.TabLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_FTGS_tablayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabRippleColor="@color/transparent">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:icon="@drawable/login_googleregister_tabitem_background" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:icon="@drawable/login_googleregister_tabitem_background" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:icon="@drawable/login_googleregister_tabitem_background" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:icon="@drawable/login_googleregister_tabitem_background" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/login_FTGS_viewpager"
            android:layout_width="327dp"
            android:layout_height="256dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </android.support.v4.view.ViewPager>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>